SERVER-65497 Do not assume input document is unmodified in DSChangeStreamHandleTopologyChange